Fixed cropped view

--- a/wsgi/myproject/landing/static/landing/landing.css
+++ b/wsgi/myproject/landing/static/landing/landing.css
@@ -25,15 +25,18 @@ a:hover img
 	box-shadow: 0px 1px 1px #aaa;
 }
 
-#landing-text
+.table-centering
 {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	width: 80%;
+	height: 100%;
 	margin: auto;
-	height: 630px;
+	font-weight: 300;
+}
+
+#content
+{
+	margin-top: 7%;
+	margin-bottom: 7%;
 	text-align: center;
 	transition: all 2s ease-in-out;
 	-webkit-transition: all 2s ease-in-out;
@@ -89,6 +92,7 @@ a:hover img
 {
 	background-color: #2c9bab;
 	margin: auto;
+	margin-top:-1px;
 	border-radius: 0 0 75px 75px;
 	width: 150px;
 	height: 75px;
@@ -97,7 +101,7 @@ a:hover img
 
 .arrow-button
 {
-	background-image: url('images/arrow.png');
+	background-image: url('arrow.png');
 	background-size: cover;
 	text-align: center;
 	display: inline-block;
@@ -153,7 +157,7 @@ a:hover img
 {
 	text-align: center;
 	margin-right: 1em;
-	width: 320px;
+	width: 240px;
 }
 
 .steps
@@ -166,10 +170,10 @@ a:hover img
 	border-radius: 40px;
 	border: 0px solid white;
 
-	transition: all 1.5s cubic-bezier(0.860, 0.000, 0.070, 1.000);
-	-webkit-transition: all 1.5s cubic-bezier(0.860, 0.000, 0.070, 1.000);
-	-moz-transition: all 1.5s cubic-bezier(0.860, 0.000, 0.070, 1.000);
-	-o-transition: all 1.5s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+	transition: all 2s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+	-webkit-transition: all 2s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+	-moz-transition: all 2s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+	-o-transition: all 2s cubic-bezier(0.860, 0.000, 0.070, 1.000);
 }
 
 .steps-open
